data/apps/argocd/guacamole/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
  name: guacamole
  namespace: guacamole
spec:
  hostnames:
  - guacomole.xxx.local
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: traefik-gateway
    namespace: traefik
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: guacamole-guacamole
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
